update home page for hadoop note creating

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
-  <header>
-  </header>
+  <head>
+    <title>Ell Wu</title>
+  </head>
   <body>
-    <h1>Hello world!</h1>
+    <h1>Hello World!</h1>
+    <p>to every one who work as a programer</p>
+
+    <h1>Blogs</h1>
+    <ul>
+      <li><a href="/blog/hadoop/index.html">Hadoop Learning Note</a></li>
+    </ul>
   </body>
 </html>
